--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,9 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=sqlSupport
+application.title=TermiNotPad
 application.vendor=Blaise
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -34,7 +35,9 @@ file.reference.json-simple-1.1.1.jar=F:\\Projets Java\\Projets Java\\a.ClassesUt
 file.reference.rsyntaxtextarea-2.5.8.jar=F:\\Projets Java\\Projets Java\\a.ClassesUtiles\\rsyntaxtextarea-2.5.8.jar
 file.reference.sqljdbc4-3.0.jar=E:\\DROPBOX\\Dropbox\\Projets Java\\JDBCSQL\\sqljdbc4-3.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.sqljdbc4-3.0.jar}:\
@@ -64,7 +67,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=sqlsupport.SqlSupport
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
