ajout de la fonctionnalité de sélection du langage

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,10 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.sqljdbc4-3.0.jar=F:\\Projets Java\\Projets Java\\a.ClassesUtiles\\mysql-connector-java-5.1.30.jar
+file.reference.autocomplete-2.5.8.jar=C:\\Users\\blaise\\Developpement\\Classes\\autocomplete-2.5.8.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\blaise\\Developpement\\Classes\\json-simple-1.1.1.jar
+file.reference.rsyntaxtextarea-2.5.8.jar=C:\\Users\\blaise\\Developpement\\Classes\\rsyntaxtextarea-2.5.8.jar
+file.reference.sqljdbc4-3.0.jar=C:\\Users\\blaise\\Developpement\\Classes\\sqljdbc4-3.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Blaise\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\blaise\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
